--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,15 @@
 <p>error-page works!</p>
+
+
+<ul>
+  <li>
+    <a routerLink="/auth/login">
+      Go to Login
+    </a>
+  </li>
+  <li>
+    <a routerLink="/auth/register">
+      Go to Register
+    </a>
+  </li>
+</ul>
